create the broser-sync module for html reload and css

--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,7 @@
-@color_orange: #FF6600;
+@color_orange: #FFF;
+@color_white: #555;
 
 body {
     background-color: @color_orange;
+    color: @color_white;
 }
