--- a/less/style.less
+++ b/less/style.less
@@ -1,7 +1,11 @@
-@color_orange: #FFF;
-@color_white: #555;
+@color_orange: #f0865D;
+@color_white: #FFF;
 
 body {
     background-color: @color_orange;
     color: @color_white;
+
+    h1:hover {
+        cursor: url('../images/cursor-circle.svg'), grab;
+    }
 }
