--- a/less/style.less
+++ b/less/style.less
@@ -5,7 +5,44 @@ body {
     background-color: @color_orange;
     color: @color_white;
 
-    h1:hover {
-        cursor: url('../images/cursor-circle.svg'), grab;
+    a {
+        color: #000;
+        text-decoration: none;
+    }
+
+    .header {
+        .header__logo {
+
+        }
+        .header__nav {
+            .header__nav_items {
+                padding: 0;
+                list-style: none;
+            }
+        }
+    }
+
+    .main {
+        .main__title {
+
+        }
+        .main__slider {
+            cursor: url('../images/cursor-circle.svg'), grab;
+
+            .main__slider_image {
+                width: 400px;
+            }
+        }
+    }
+
+    .footer {
+        .footer__social {
+            .footer__social_item {
+
+            }
+            .footer__social_line {
+
+            }
+        }
     }
 }
