--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+  margin: 0;
   background-color: #f0865D;
   color: #FFF;
 }
@@ -6,9 +7,20 @@ body a {
   color: #000;
   text-decoration: none;
 }
-body .header .header__nav .header__nav_items {
+body .header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 50px;
+}
+body .header .nav .nav__list {
+  margin: 0;
   padding: 0;
   list-style: none;
+  text-align: right;
+}
+body .header .nav .nav__list .nav__list_item {
+  margin-bottom: 10px;
 }
 body .main .main__slider {
   cursor: url('../images/cursor-circle.svg'), grab;
