--- a/less/style.less
+++ b/less/style.less
@@ -4,6 +4,9 @@
 body {
     margin: 0;
     background-color: @color_orange;
+    background-image: url('/images/bg-sketch.png');
+    background-repeat: no-repeat;
+    background-position: 50% 10%;
     color: @color_white;
 
     a {
@@ -11,11 +14,18 @@ body {
         text-decoration: none;
     }
 
+    // @font-face {
+    //     font-family: '';
+    //     src: url('./fonts');
+    // }
+
     .header {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         padding: 50px;
+        // height: 50px;
+        height: 0;
 
         .logo {
 
@@ -35,19 +45,54 @@ body {
     }
 
     .main {
-        .main__title {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
+        .main__title {
+            position: absolute;
+            font-size: 72px;
+            // color: #580300;
+            z-index: 5;
         }
-        .main__slider {
+        .swiper-container {
+            width: auto;
+            height: 70vh;
+            margin: 0 50px;
+            transform: rotate(2deg);
             cursor: url('../images/cursor-circle.svg'), grab;
 
-            .main__slider_image {
-                width: 400px;
+            img {
+                height: 100%;
+            }
+
+            .swiper-wrapper {
+                align-items: center;
+            }
+            .swiper-slide-prev img, .swiper-slide-next img {
+                height: 50%;
+            }
+            .swiper-slide-prev {
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+            }
+            .swiper-slide-next {
+                display: flex;
+                align-items: flex-end;
+                justify-content: flex-start;
+            }
+            .swiper-slide-active {
+                height: 100%;
+                transition: 1s opacity 1;
             }
         }
     }
 
     .footer {
+        padding: 50px;
+        
         .footer__social {
             .footer__social_item {
 
