--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,6 @@
 body {
   margin: 0;
   background-color: #FFF;
-  background-image: url('/images/bg-sketch.png');
-  background-repeat: no-repeat;
-  background-position: 50% 10%;
   color: #000;
   font-family: 'TTTravels-Regular';
   font-size: 14px;
@@ -125,6 +122,21 @@ body .footer .footer__social .footer__social_line {
   width: 50px;
   margin: 0 10px;
   background: #393939;
+}
+body .background {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  overflow: hidden;
+}
+body .background .background__image {
+  width: 100%;
+  height: 100%;
+  background-image: url('/images/bg-sketch.png');
+  background-repeat: no-repeat;
+  background-position: 50% 10%;
 }
 @media (max-width: 1024px) {
   .main .main__title {
