--- a/less/style.less
+++ b/less/style.less
@@ -5,9 +5,6 @@
 body {
     margin: 0;
     background-color: @color_white;
-    background-image: url('/images/bg-sketch.png');
-    background-repeat: no-repeat;
-    background-position: 50% 10%;
     color: @color_black;
     font-family: 'TTTravels-Regular';
     font-size: 14px;
@@ -150,6 +147,23 @@ body {
                 margin: 0 10px;
                 background: #393939;
             }
+        }
+    }
+
+    .background {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        overflow: hidden;
+
+        .background__image {
+            width: 100%;
+            height: 100%;
+            background-image: url('/images/bg-sketch.png');
+            background-repeat: no-repeat;
+            background-position: 50% 10%;
         }
     }
 }
