upgraded an action of the menu

--- a/css/style.css
+++ b/css/style.css
@@ -182,9 +182,12 @@ body .background .background__image {
   .nav .nav__toggle {
     display: none !important;
   }
+  .nav .nav__list {
+    display: block !important;
+  }
 }
 @media (max-width: 768px) {
-  .nav .nav__list {
+  .nav #nav__list {
     display: none;
   }
   .swiper-container .swiper-wrapper .swiper-slide {
