--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,34 @@ body {
   color: #000;
   font-family: 'TTTravels-Regular';
   font-size: 14px;
+  cursor: none;
 }
 body a {
   color: #000;
   text-decoration: none;
+  cursor: none;
+}
+body #mouse {
+  position: absolute;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: 2px solid #000;
+  border-radius: 50%;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  user-select: none;
+}
+body #mouseMessage {
+  position: absolute;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100px;
+  opacity: 0;
 }
 @font-face {
   font-family: 'Schnyder_X_Cond_XL_Demi';
@@ -114,7 +138,6 @@ body .main .swiper-container {
   height: 70vh;
   margin: 0 50px;
   transform: rotate(2deg);
-  cursor: url('../images/cursor-circle.svg'), grab;
 }
 body .main .swiper-container img {
   height: 100%;
