--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body #mouse {
   width: 30px;
   height: 30px;
   background-color: transparent;
-  border: 2px solid #000;
+  border: 2px solid #E5E5E5;
   border-radius: 50%;
   -moz-user-select: none;
   -khtml-user-select: none;
@@ -32,6 +32,62 @@ body #mouseMessage {
   left: 0;
   width: 100px;
   opacity: 0;
+}
+body .preloader {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: #e0e0e0;
+  z-index: 900;
+}
+body .preloader__row {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  width: 70px;
+  height: 70px;
+  margin-top: -35px;
+  margin-left: -35px;
+  text-align: center;
+  animation: preloader-rotate 2s infinite linear;
+}
+body .preloader__row--item {
+  position: absolute;
+  display: inline-block;
+  top: 0;
+  background-color: #580300;
+  border-radius: 100%;
+  width: 35px;
+  height: 35px;
+  animation: preloader-bounce 2s infinite ease-in-out;
+}
+body .preloader__item:last-child {
+  top: auto;
+  bottom: 0;
+  animation-delay: -1s;
+}
+@keyframes preloader-rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes preloader-bounce {
+  0%,
+  100% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+  }
+}
+body .loaded_hiding .preloader {
+  transition: 0.3s opacity;
+  opacity: 0;
+}
+body .loaded .preloader {
+  display: none;
 }
 @font-face {
   font-family: 'Schnyder_X_Cond_XL_Demi';
