--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,6 @@
 @color_white: #FFF;
 @color_black: #000;
+@color_grey: #E5E5E5;
 @color_red: #580300;
 
 body {
@@ -23,7 +24,7 @@ body {
         width: 30px;
         height: 30px;
         background-color: transparent;
-        border: 2px solid @color_black;
+        border: 2px solid @color_grey;
         border-radius: 50%;
         -moz-user-select: none;
         -khtml-user-select: none;
@@ -36,6 +37,67 @@ body {
         left: 0;
         width: 100px;
         opacity: 0;
+    }
+
+    //#### Preloader
+    .preloader {
+        position: fixed;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        background: #e0e0e0;
+        z-index: 900;
+    }
+    .preloader__row {
+        position: relative;
+        top: 50%;
+        left: 50%;
+        width: 70px;
+        height: 70px;
+        margin-top: -35px;
+        margin-left: -35px;
+        text-align: center;
+        animation: preloader-rotate 2s infinite linear;
+    }
+    .preloader__row--item {
+        position: absolute;
+        display: inline-block;
+        top: 0;
+        background-color: @color_red;
+        border-radius: 100%;
+        width: 35px;
+        height: 35px;
+        animation: preloader-bounce 2s infinite ease-in-out;
+    }
+    .preloader__item:last-child {
+        top: auto;
+        bottom: 0;
+        animation-delay: -1s;
+    }
+    
+    @keyframes preloader-rotate {
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+    @keyframes preloader-bounce {
+        0%,
+        100% {
+            transform: scale(0);
+        }
+        
+        50% {
+            transform: scale(1);
+        }
+    }
+    
+    .loaded_hiding .preloader {
+        transition: 0.3s opacity;
+        opacity: 0;
+    }
+    .loaded .preloader {
+        display: none;
     }
 
     @font-face {
