--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body #mouse {
   width: 30px;
   height: 30px;
   background-color: transparent;
-  border: 2px solid #E5E5E5;
+  border: 2px solid #888;
   border-radius: 50%;
   -moz-user-select: none;
   -khtml-user-select: none;
