--- a/less/style.less
+++ b/less/style.less
@@ -288,7 +288,7 @@ body {
         .background__image {
             width: 100%;
             height: 100%;
-            background-image: url('/images/bg-sketch.png');
+            background-image: url('../images/bg-sketch.png');
             background-repeat: no-repeat;
             background-position: 50% 10%;
         }
