--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body #mouse {
   width: 30px;
   height: 30px;
   background-color: transparent;
-  border: 2px solid #888;
+  border: 2px solid #555;
   border-radius: 50%;
   -moz-user-select: none;
   -khtml-user-select: none;
@@ -248,7 +248,7 @@ body .background {
 body .background .background__image {
   width: 100%;
   height: 100%;
-  background-image: url('/images/bg-sketch.png');
+  background-image: url('../images/bg-sketch.png');
   background-repeat: no-repeat;
   background-position: 50% 10%;
 }
